# drake_diff_ik_dual_arm

./: LICENSE  README.md  pyproject.toml
drake_diff_ik_dual_arm/: basics.py  diff_ik.py
drake_diff_ik_dual_arm/models/: add_dual_arm_pandas.yaml  add_dual_arm_pandas_without_grippers.yaml  add_panda_arm_extras.yaml  add_panda_flange_rotated.yaml  add_panda_hand_nominal.yaml  environment.sdf
scripts/: collision_check.py  gravity_comp_check.py  main_example.py
